Update composer.json -> change package name to ours

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name" : "webit/gls-ade",
+    "name" : "insolutions/gls-ade",
     "type" : "library",
     "description": "Web-IT GLS-ADE SDK",
     "authors": [
